// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip should display the tooltip after focusing for 1s by default only in keyboard mode 1`] = `
<span
  class="rmd-tooltip rmd-tooltip--below rmd-tooltip--visible"
  id=":r2:-tooltip"
  role="tooltip"
  style="position: fixed; left: 16px; top: 24px;"
>
  Tooltip
</span>
`;

exports[`Tooltip should display the tooltip after focusing for 1s by default only in keyboard mode 2`] = `
<span
  class="rmd-tooltip rmd-tooltip--below rmd-display-none"
  id=":r2:-tooltip"
  role="tooltip"
  style="position: fixed; left: 16px; top: 24px;"
>
  Tooltip
</span>
`;

exports[`Tooltip should support controlling the visibility manually with the setVisible and hideTooltip returned functions 1`] = `
<span
  class="rmd-tooltip rmd-tooltip--below rmd-tooltip--enter rmd-tooltip--visible"
  id=":r6:-tooltip"
  role="tooltip"
  style="position: fixed; left: 16px; top: 24px;"
>
  Tooltip
</span>
`;

exports[`Tooltip should support controlling the visibility manually with the setVisible and hideTooltip returned functions 2`] = `
<span
  class="rmd-tooltip rmd-tooltip--below rmd-tooltip--visible"
  id=":r6:-tooltip"
  role="tooltip"
  style="position: fixed; left: 16px; top: 24px;"
>
  Tooltip
</span>
`;

exports[`Tooltip should support controlling the visibility manually with the setVisible and hideTooltip returned functions 3`] = `
<span
  class="rmd-tooltip rmd-tooltip--below rmd-display-none"
  id=":r6:-tooltip"
  role="tooltip"
  style="position: fixed; left: 16px; top: 24px;"
>
  Tooltip
</span>
`;

exports[`Tooltip should support controlling the visibility manually with the setVisible and hideTooltip returned functions 4`] = `
<span
  class="rmd-tooltip rmd-tooltip--below rmd-display-none"
  id=":r6:-tooltip"
  role="tooltip"
  style="position: fixed; left: 16px; top: 24px;"
>
  Tooltip
</span>
`;
